--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
     {% if site.footer_fixed %}
     <footer class="fixed-bottom">
+      <center>
       <div class="container mt-0">
         &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
         {%- if site.impressum_path -%}
@@ -9,9 +10,11 @@
         Last updated: {{ "now" | date: '%B %d, %Y' }}.
         {%- endif %}
       </div>
+      </center>
     </footer>
     {%- else -%}
     <footer class="sticky-bottom mt-5">
+      <center>
       <div class="container">
         &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
         {%- if site.impressum_path -%}
@@ -21,5 +24,6 @@
         Last updated: {{ "now" | date: '%B %d, %Y' }}.
         {%- endif %}
       </div>
+      </center>
     </footer>
     {%- endif %}
